# pensioen

./: .gitignore  AGENTS.md  README.md  app.py  pyproject.toml
.github/instructions/: python-conventions.instructions.md
config/: aow_leeftijden.json  belasting_2025.json  belasting_2026.json
src/pensioen/: __init__.py
src/pensioen/calculations/: cashflow_engine.py  pensioen_engine.py  scenario_engine.py  vermogen_engine.py
src/pensioen/models/: cashflow.py  component.py  pensioen_record.py  periodieke_waarde.py  persoon.py  scenario.py
src/pensioen/parsers/: parser_mpo.py
src/pensioen/reports/: rapport_engine.py
src/pensioen/tax/: aow_engine.py  belasting_engine.py  belasting_loader.py  heffingskorting.py
src/pensioen/ui/: component_helpers.py  flow_context.py  helpers.py  pagina_accountant.py  pagina_bereken.py  pagina_componenten.py  pagina_import.py  pagina_instellingen.py  pagina_persoon.py  pagina_rapport.py  pagina_resultaten.py  pagina_scenario.py  scenario_context.py  sessie_persistentie.py  style.py
src/pensioen/validators/: validator.py
tests/: conftest.py  test_aow_engine.py  test_belasting_engine.py  test_cashflow_engine.py  test_parser_mpo.py  test_pensioen_engine.py  test_periodieke_waarde.py  test_scenario_context.py  test_scenario_engine.py  test_scenario_inheritance.py  test_sessie_persistentie.py  test_vermogen_engine.py
tests/fixtures/: mpo_partner1.csv  mpo_partner2.csv
